--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Truck game</title>
 </head>
 
-<body style="margin-top: 0px;">
+<body style="margin: 0px;">
 	<div id="app"></div>
 	<script type="module" src="src/main.js"></script>
 </body>
